--- a/style.css
+++ b/style.css
@@ -30,19 +30,13 @@ body {
 }
 
 #level3 {
-   background-color: aqua;
+   background-color: lightblue;
     background-size: cover; 
 }
 
-.game {
-  width: 640px;
-  height: 640px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-}
 
-.cardlevel1 {
+
+.cardlevel {
     width: calc(25% - 10px);
     height: calc(33.333% - 10px);
     position: relative;
@@ -52,11 +46,21 @@ body {
     transition: transform .5s;
 }
 
-.cardlevel1:active {
-    transform: scale(.97);
-    transition: transform .2s;
+.cardlevel:active {
+    transform: scale(.99);
+    transition: transform .3s;
 }
 
+
+.front-face,
+.back-face {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  position: absolute;
+  border-radius: 5px;
+  background: lightgray;
+}
 
 
 /*-----------------------------------------------Index page----------------------------------------------*/
@@ -77,6 +81,43 @@ body {
 
 
 
+/*-----------------------------------------------Level 1----------------------------------------------*/
 
+.game1 {
+  width: 640px;
+  height: 640px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
+  position: relative;
+}
+
+
+
+
+/*-----------------------------------------------Level 2----------------------------------------------*/
+
+.game2 {
+  width: 850px;
+  height: 850px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+
+
+
+
+/*-----------------------------------------------Level 3----------------------------------------------*/
+.game3 {
+  width: 1200px;
+  height: 1200px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
 
 
