--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ body {
 }
 
 #level1 {
-   background-image: url("<a href='https://www.freepik.com/vectors/technology'>Technology vector created by starline - www.freepik.com</a>");
+  background-image: url("images/level1/background.jpg");
     background-size: cover; 
 }
 
 #level2 {
-   background-image: url("https://raw.githubusercontent.com/mysan91/Milestoneproject2/master/images/level2/starwars.jpg");
+  background-image: url("images/level2/starwars.jpg");
     background-size: cover; 
 }
 
@@ -35,6 +35,50 @@ body {
 }
 
 
+
+.front-face,
+.back-face {
+  padding: 20px;
+  position: absolute;
+  border-radius: 5px;
+  background: lightgray;
+}
+
+
+/*-----------------------------------------------Index page----------------------------------------------*/
+
+/*------The styling of the main buttons in the index/start page----*/
+
+.button:hover {
+    box-shadow: 0 12px 16px 0 rgba(243, 240, 240, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: grey; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+
+.list {
+      align-self: center;
+}
+
+
+
+/*-----------------------------------------------Level 1----------------------------------------------*/
+
+.game1 {
+  width: 640px;
+  height: 640px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
+  position: relative;
+}
 
 .cardlevel {
     width: calc(25% - 10px);
@@ -52,49 +96,6 @@ body {
 }
 
 
-.front-face,
-.back-face {
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  position: absolute;
-  border-radius: 5px;
-  background: lightgray;
-}
-
-
-/*-----------------------------------------------Index page----------------------------------------------*/
-
-/*------The styling of the main buttons in the index/start page----*/
-.button:hover {
-    box-shadow: 0 12px 16px 0 rgba(243, 240, 240, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: grey; 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-
-
-
-
-/*-----------------------------------------------Level 1----------------------------------------------*/
-
-.game1 {
-  width: 640px;
-  height: 640px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  margin: 5px;
-  position: relative;
-}
-
-
-
 
 /*-----------------------------------------------Level 2----------------------------------------------*/
 
@@ -105,6 +106,22 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+
+.cardlevel2 {
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
+    position: relative;
+    margin: 5px;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+}
+
+.cardlevel2:active {
+    transform: scale(.99);
+    transition: transform .3s;
+}
+
 
 
 
@@ -118,6 +135,22 @@ body {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
+}
+
+
+.cardlevel3 {
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
+    position: relative;
+    margin: 5px;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+}
+
+.cardlevel2:active {
+    transform: scale(.99);
+    transition: transform .3s;
 }
 
 
