--- a/style.css
+++ b/style.css
@@ -35,93 +35,11 @@ body {
 }
 
 
-
-.front-face,
-.back-face {
-  padding: 20px;
-  position: absolute;
-  border-radius: 5px;
-  background: lightgray;
-}
-
-
-/*-----------------------------------------------Index page----------------------------------------------*/
-
-/*------The styling of the main buttons in the index/start page----*/
-
-.button:hover {
-    box-shadow: 0 12px 16px 0 rgba(243, 240, 240, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: grey; 
-    border: none;
-    color: white;
-    padding: 15px 32px;
+ul {
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
 }
-
-
-.list {
-      align-self: center;
-}
-
-
-
-/*-----------------------------------------------Level 1----------------------------------------------*/
-
-.game1 {
-  width: 640px;
-  height: 640px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  margin: 5px;
-  position: relative;
-}
-
-.cardlevel {
-    width: calc(25% - 10px);
-    height: calc(33.333% - 10px);
-    position: relative;
-    margin: 5px;
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform .5s;
-}
-
-.cardlevel:active {
-    transform: scale(.99);
-    transition: transform .3s;
-}
-
-
 
 /*-----------------------------------------------Level 2----------------------------------------------*/
-
-.game2 {
-  width: 850px;
-  height: 850px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.cardlevel2 {
-    width: calc(25% - 10px);
-    height: calc(33.333% - 10px);
-    position: relative;
-    margin: 5px;
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform .5s;
-}
-
-.cardlevel2:active {
-    transform: scale(.99);
-    transition: transform .3s;
-}
-
 
 
 
@@ -129,28 +47,4 @@ body {
 
 
 /*-----------------------------------------------Level 3----------------------------------------------*/
-.game3 {
-  width: 1200px;
-  height: 1200px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-
-.cardlevel3 {
-    width: calc(25% - 10px);
-    height: calc(33.333% - 10px);
-    position: relative;
-    margin: 5px;
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform .5s;
-}
-
-.cardlevel2:active {
-    transform: scale(.99);
-    transition: transform .3s;
-}
-
 
