--- a/style.css
+++ b/style.css
@@ -39,6 +39,46 @@ ul {
     text-align: center;
 }
 
+h1 {
+    font-size: 60px;
+    color: white;
+}
+
+.button {
+  margin: auto;
+  cursor: pointer;
+  position: relative;
+  appearance: none;
+  overflow: hidden;
+  border: 10px;
+  padding: 5px;
+  background-color: transparent;
+  font-size: 16px;
+  color: white;
+  transition: 0,5s; 
+text-align: center;
+border: 2px solid transparent;
+}
+
+.button:after {
+  background: green;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: 0.5s;
+}
+
+.button:hover {
+  transform: scale(1.6, 1.6);
+  color: black;
+}
+
+.button:hover:after {
+  transform: translateY(0);
+}
 /*-----------------------------------------------Level 2----------------------------------------------*/
 
 
