--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 
 body {
-    display: flex;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
 }
 
 
@@ -41,9 +42,18 @@ ul {
 
 h1 {
     font-size: 60px;
-    color: white;
+     color: white;
+     padding: 0;
+     text-align: center;
+     text-shadow: 1px 1px 2px ;
+     font-family: sans-serif;
 }
 
+
+h2 {
+    font-size: 12px;
+    color: white;
+}
 .button {
   margin: auto;
   cursor: pointer;
@@ -79,6 +89,38 @@ border: 2px solid transparent;
 .button:hover:after {
   transform: translateY(0);
 }
+
+
+/*-------------all image cards--------------*/ 
+
+img {
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  cursor: pointer;
+  overflow: hidden;
+  transition: width 0.7s, height 1s;
+ }
+
+ img:hover {
+  opacity:0.9 !important;
+  filter:alpha(opacity=70) !important; 
+  width: 160px;
+  height: 160px;
+}
+ 
+
+.container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 150px 150px 150px;
+  grid-template-rows: 150px 150px 150px;
+  justify-content: center;
+  align-content: center;
+  }
+
+
+
 /*-----------------------------------------------Level 2----------------------------------------------*/
 
 
