--- a/style.css
+++ b/style.css
@@ -110,7 +110,12 @@ img {
 }
  
 
-.container {
+
+
+
+/*-----------------------------------------------Level 1----------------------------------------------*/
+
+container {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 150px 150px 150px;
@@ -121,12 +126,28 @@ img {
 
 
 
+
+
 /*-----------------------------------------------Level 2----------------------------------------------*/
 
+.container2 {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 150px 150px 150px;
+  grid-template-rows: 150px 150px 150px;
+  justify-content: center;
+  align-content: center;
+  }
 
-
-
-
-
+  
 /*-----------------------------------------------Level 3----------------------------------------------*/
+
+.container3 {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 200px 200px 200px;
+  grid-template-rows: 200px 200px 200px;
+  justify-content: center;
+  align-content: center;
+  }
 
