--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 
 body {
-    margin-top: 7rem;
-    margin-bottom: 7rem;
+  font-family: sans-serif;
+  
 }
 
 
@@ -21,40 +21,78 @@ body {
 }
 
 #level1 {
-  background-image: url("images/level1/background.jpg");
-    background-size: cover; 
-}
+ background-image: url("https://raw.githubusercontent.com/mysan91/Milestoneproject2/master/images/level1/background.jpg");
+ background-size: cover;
+  }
+    
 
-#level2 {
-  background-image: url("images/level2/starwars.jpg");
-    background-size: cover; 
-}
+  #level2 {
+ background-image: url("https://raw.githubusercontent.com/mysan91/Milestoneproject2/master/images/level2/starwars.jpg");
+ background-size: cover;
+  }
 
-#level3 {
-   background-color: lightblue;
-    background-size: cover; 
-}
+  #level3 {
+    background-color: green;
 
+  }
+
+
+  /*----Generall for alla pages-----*/ 
+
+ 
+
+
+  /*------Index page----*/
 
 ul {
     text-align: center;
 }
 
+
 h1 {
-    font-size: 60px;
-     color: white;
+    font-size: 80px;
+     color: yellow;
      padding: 0;
      text-align: center;
      text-shadow: 1px 1px 2px ;
      font-family: sans-serif;
+     padding: 10px;
+     text-shadow: 5px 5px 5px rgb(216, 133, 9);
+     padding: 80px;
+     margin-top: 100px;
+     width: 100%;
+  
 }
 
+    
 
 h2 {
-    font-size: 12px;
-    color: white;
+  font-size: 25px;
+  color: yellow;
+  font-family: sans-serif;
+  padding: 0;
+  text-align: center;
+  margin-top: 15px;
+  padding: 10px;
+  text-shadow: 5px 5px 5px rgb(216, 133, 9);
+  width: 100%;
 }
-.button {
+
+h3 {
+
+    font-size: 30px;
+    color: yellow;
+    font-family: sans-serif;
+    padding: 0;
+    text-align: center;
+    margin-top: 15px;
+    padding: 10px;
+    text-shadow: 5px 5px 5px rgb(216, 133, 9);
+  
+
+}
+
+button {
   margin: auto;
   cursor: pointer;
   position: relative;
@@ -68,9 +106,12 @@ h2 {
   transition: 0,5s; 
 text-align: center;
 border: 2px solid transparent;
+-webkit-box-shadow: 2px 2px 2px 0px yellow, inset 2px 2px 10px 0px #000000, 5px 5px 15px 5px rgba(255,139,253,0); 
+width: 50%;
+
 }
 
-.button:after {
+button:after {
   background: green;
   position: absolute;
   top: 0;
@@ -81,82 +122,119 @@ border: 2px solid transparent;
   transition: 0.5s;
 }
 
-.button:hover {
+button:hover {
   transform: scale(1.6, 1.6);
   color: black;
 }
 
-.button:hover:after {
+button:hover:after {
   transform: translateY(0);
 }
 
 
-/*-------------all image cards--------------*/ 
 
-img {
-  width: 100%;
-  height: 100%;
-  border-radius: 12px;
-  cursor: pointer;
-  overflow: hidden;
-  transition: width 0.7s, height 1s;
- }
-
- img:hover {
-  opacity:0.9 !important;
-  filter:alpha(opacity=70) !important; 
-  width: 160px;
-  height: 160px;
-}
- 
+/*------The get back button on the levels---*/
 
 
 
 
-/*-----------------------------------------------Level 1----------------------------------------------*/
-
-container {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 150px 150px 150px;
-  grid-template-rows: 150px 150px 150px;
-  justify-content: center;
-  align-content: center;
-  }
-
-
-
-
-
-/*-----------------------------------------------Level 2----------------------------------------------*/
-
-.container2 {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 150px 150px 150px;
-  grid-template-rows: 150px 150px 150px;
-  justify-content: center;
-  align-content: center;
-  }
-
+/*------level 1 ---*/
   
-/*-----------------------------------------------Level 3----------------------------------------------*/
+  .memory-game {
+    
+    margin: 5px auto 5px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    padding: 20px;
+    align-items: center;
+    position: relative;
+    justify-content: center;
+    height: 90vh;
+    width: 50%;
+      }
+  
+    
+  .memory-card {
+    width: calc(25% - 10px);
+    height: calc(25% - 10px);
+    margin: 5px;
+    position: relative;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform 0.4s;
+  }
 
-.container3 {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 200px 200px 200px;
-  grid-template-rows: 200px 200px 200px;
-  justify-content: center;
-  align-content: center;
+
+/*------level 2 ---*/
+
+  .memory-game2 {
+    width: 1200px;
+    height: 660px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .memory-card2 {
+    width: calc(16% - 10px);
+    height: calc(25% - 10px);
+    margin: 5px;
+    position: relative;
+    position: relative;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform 0.4s;
+  }
+  
+  .memory-card2:active {
+    transform: scale(0.95);
+    transition: transform 0.1s;
+    background-color: red;
+}
+
+.memory-card2.flip {
+    transform: rotateY(180deg);
+}
+
+
+
+  /*------level 3 ---*/
+
+  .memory-game3 {
+    width: 1400px;
+    height: 800px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .memory-card3 {
+    width: calc(13% - 10px);
+    height: calc(13% - 20px);
+    margin: 5px;
+    position: relative;
+    position: relative;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform 0.4s;
   }
 
 
 
-  /*-----------------------------------------------How to Play----------------------------------------------*/
-
-  .container {
-      background-color: black;
-      height: 600px;
-      width: 100%;
+  .front-face,
+  .back-face {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    background: black;
   }
+
+  .front-face {
+    transform: rotateY(180deg);
+}
