--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@
 
 body {
   font-family: sans-serif;
-  
+  height: 80vh;
+
 }
+
 
 
 
@@ -18,31 +20,93 @@ body {
 #indexpage {
     background-image: url("https://raw.githubusercontent.com/mysan91/Milestoneproject2/master/images/index/index.jpg");
     background-size: cover; 
+   
 }
 
 #level1 {
  background-image: url("https://raw.githubusercontent.com/mysan91/Milestoneproject2/master/images/level1/background.jpg");
  background-size: cover;
+
+ display: flex;
   }
     
 
   #level2 {
  background-image: url("https://raw.githubusercontent.com/mysan91/Milestoneproject2/master/images/level2/starwars.jpg");
  background-size: cover;
+ 
+ display: flex;
   }
 
   #level3 {
     background-color: green;
-
+    background-repeat: no-repeat;
+    display: flex; 
   }
 
 
-  /*----Generall for alla pages-----*/ 
+  /*----------------------------Generall for alla pages-----------------------*/ 
 
  
 
+  .front-face,
+  .back-face {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    background: rgba(37, 127, 211, 0.623);
+    backface-visibility: hidden;
+  
+  }
+  
+  .front-face {
+    transform: rotateY(180deg);
+  }
 
-  /*------Index page----*/
+  /*--------Scoreboard-----*/
+
+  .score-panel {
+    margin-bottom: 20px;
+    align-items: center;
+    background-color: white;
+    margin-right: 150px;
+  }
+  
+  .score-panel .stars {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    margin: 0 5px 0 0;
+  }
+  
+  .score-panel .stars li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .score-panel .restart {
+    float: right;
+    cursor: pointer;
+  }
+  
+  .fa-star {
+    color: yellow;
+  }
+  
+  .timer {
+    display: inline-block;
+    margin: 0 1rem;
+  }
+  
+  .buttonsection  {
+    align-items: ;
+  }
+
+
+
+  /*----------------------Index page----------------*/
 
 ul {
     text-align: center;
@@ -88,11 +152,17 @@ h3 {
     margin-top: 15px;
     padding: 10px;
     text-shadow: 5px 5px 5px rgb(216, 133, 9);
-  
+}
+
+h4 {
+  font-size: 15px;
+  color: white;
 
 }
 
-button {
+/*-----------------The index page button---------------*/
+
+.button {
   margin: auto;
   cursor: pointer;
   position: relative;
@@ -104,14 +174,14 @@ button {
   font-size: 16px;
   color: white;
   transition: 0,5s; 
-text-align: center;
-border: 2px solid transparent;
--webkit-box-shadow: 2px 2px 2px 0px yellow, inset 2px 2px 10px 0px #000000, 5px 5px 15px 5px rgba(255,139,253,0); 
-width: 50%;
+  text-align: center;
+  border: 2px solid transparent;
+  -webkit-box-shadow: 2px 2px 2px 0px yellow, inset 2px 2px 10px 0px #000000, 5px 5px 15px 5px rgba(255,139,253,0); 
+  width: 50%;
 
 }
 
-button:after {
+.button:after {
   background: green;
   position: absolute;
   top: 0;
@@ -122,120 +192,64 @@ button:after {
   transition: 0.5s;
 }
 
-button:hover {
+.button:hover {
   transform: scale(1.6, 1.6);
   color: black;
 }
 
-button:hover:after {
+.button:hover:after {
   transform: translateY(0);
 }
 
 
 
-/*------The get back button on the levels---*/
+/*----------The get back button and restart button on the levels-----------*/
 
-
-
-
-/*------level 1 ---*/
-  
-  .memory-game {
-    
-    margin: 5px auto 5px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: white;
-    padding: 20px;
-    align-items: center;
-    position: relative;
-    justify-content: center;
-    height: 90vh;
-    width: 50%;
-      }
-  
-    
-  .memory-card {
-    width: calc(25% - 10px);
-    height: calc(25% - 10px);
-    margin: 5px;
-    position: relative;
-    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform 0.4s;
-  }
-
-
-/*------level 2 ---*/
-
-  .memory-game2 {
-    width: 1200px;
-    height: 660px;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .memory-card2 {
-    width: calc(16% - 10px);
-    height: calc(25% - 10px);
-    margin: 5px;
-    position: relative;
-    position: relative;
-    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform 0.4s;
-  }
-  
-  .memory-card2:active {
-    transform: scale(0.95);
-    transition: transform 0.1s;
-    background-color: red;
+.buttonback {
+  color: yellow;
+  width: 50%;
+  height: 50%;
 }
 
-.memory-card2.flip {
-    transform: rotateY(180deg);
+
+/*--------------The memory game cards-----------*/
+
+.memory-game {
+  position: relative;
+  height: 89vh;
+  width: 100%;
+  margin: 5px auto 5px auto;
+  display: flex;
+  flex-wrap: wrap;
+  perspective: 1000px;
+ 
+}
+
+.memory-card {
+  display: flex;
+  margin: 5px;
+  height: calc(20% - 10px);
+  width: calc(16.66% - 10px);
+  border-radius: 5px;
+  position: relative;
+  transform: scale(1);
+  transform-style: preserve-3d;
+  transform: scale(1);
+  transition: transform .5s;
+}
+
+.memory-card:active {
+  transform: scale(0.97);
+  transition: transform .2s;
+}
+
+/*-------Making the card turn 180 degrees when you push on in-----*/ 
+
+.memory-card.flip {
+  transform: rotateY(180deg);
 }
 
 
 
-  /*------level 3 ---*/
 
-  .memory-game3 {
-    width: 1400px;
-    height: 800px;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .memory-card3 {
-    width: calc(13% - 10px);
-    height: calc(13% - 20px);
-    margin: 5px;
-    position: relative;
-    position: relative;
-    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform 0.4s;
-  }
-
-
-
-  .front-face,
-  .back-face {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    position: absolute;
-    border-radius: 5px;
-    background: black;
-  }
-
-  .front-face {
-    transform: rotateY(180deg);
-}
 
